# ZK-CREDENTIAL

./: bank.json  benchmark.sh  demo.sh  input.json  insurance.json  package-lock.json  package.json  poseidon.js  poseidon_multi.js  pot12_final.ptau  proof.json  proof_bank.json  proof_insurance.json  witness.json
circuits/: attributeProof.circom
issuer/: Cargo.toml
issuer-rust/: Cargo.toml  credential.json  output.txt  session.json
issuer-rust/src/: main.rs
issuer-rust/src/crypto/: mod.rs
issuer-rust/src/format/: mod.rs
issuer/src/: main.rs
