[package]
name = "issuer-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "issuer"
path = "src/main.rs"

[dependencies]
# Arkworks BN254 curve + field arithmetic
ark-ff       = { version = "0.4", features = ["std"] }
ark-bn254    = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }

# Poseidon hash matching circomlib BN254
# poseidon-rs  = "0.0.10"

# Serialisation
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"

# CLI
clap         = { version = "4.5", features = ["derive"] }

# Randomness
rand         = "0.8"

# Signing
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Misc
hex          = "0.4"
uuid         = { version = "1.7", features = ["v4"] }
sha2         = "0.10"
num-bigint   = "0.4"
